Scripting/Lab5/error.txt
HelloWorld.java:8: error: ')' expected
System.out.println(Hello World");
                        ^
HelloWorld.java:8: error: unclosed string literal
System.out.println(Hello World");
                              ^
HelloWorld.java:8: error: not a statement
System.out.println(Hello World");
                         ^
3 errors
